# PolyEnv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main_gui.cpp  mkdocs.yml  pyproject.toml
apps/cli/: main.cpp
apps/gui/: main_gui.cpp
assets/skills/: AirSkill.cpp  AirSkill.h  AlgaeSkill.cpp  AlgaeSkill.h  AmphibiousSkill.cpp  AmphibiousSkill.h  AutoFloodSkill.cpp  AutoFloodSkill.h  AutoFreezeSkill.cpp  AutoFreezeSkill.h  CarrySkill.cpp  CarrySkill.h  ConvertSkill.cpp  ConvertSkill.h  CreepSkill.cpp  CreepSkill.h  DashSkill.cpp  DashSkill.h  DoubleAttackSkill.cpp  DoubleAttackSkill.h  DrenchSkill.cpp  DrenchSkill.h  EatSkill.cpp  EatSkill.h  EscapeSkill.cpp  EscapeSkill.h  ExplodeSkill.cpp  ExplodeSkill.h  FortifySkill.cpp  FortifySkill.h  FreezeAreaSkill.cpp  FreezeAreaSkill.h  FreezeSkill.cpp  FreezeSkill.h  GrowSkill.cpp  GrowSkill.h  HealSkill.cpp  HealSkill.h  HideSkill.cpp  HideSkill.h  (+34 more)
assets/tech/: TechDB.cpp  TechDB.h
assets/techs/: AquatismTech.cpp  AquatismTech.h  ArcheryTech.cpp  ArcheryTech.h  ChivalryTech.cpp  ChivalryTech.h  ClimbingTech.cpp  ClimbingTech.h  ConstructionTech.cpp  ConstructionTech.h  DiplomacyTech.cpp  DiplomacyTech.h  FarmingTech.cpp  FarmingTech.h  FishingTech.cpp  FishingTech.h  ForestryTech.cpp  ForestryTech.h  FreeSpiritTech.cpp  FreeSpiritTech.h  HuntingTech.cpp  HuntingTech.h  MathematicsTech.cpp  MathematicsTech.h  MeditationTech.cpp  MeditationTech.h  MiningTech.cpp  MiningTech.h  NavigationTech.cpp  NavigationTech.h  OrganizationTech.cpp  OrganizationTech.h  PhilosophyTech.cpp  PhilosophyTech.h  RammingTech.cpp  RammingTech.h  RidingTech.cpp  RidingTech.h  RoadsTech.cpp  RoadsTech.h  (+12 more)
assets/tribes/: Bardur.cpp  Bardur.h  Imperius.cpp  Imperius.h  Tribe.cpp  Tribe.h  Xinxi.cpp  Xinxi.h
assets/units/: Unit.cpp  Unit.h  UnitFactory.cpp  UnitFactory.h
data/: Units.json
docs/: gui.md  hidden_map_predictions.md  index.md  installation.md  map_api.md  mcts_pool.md  model_request_api.md  python_api.md  readthedocs.md  replays.md  self_play_pool.md  token_reference.md  training_loop.md  troubleshooting.md  vector_env.md  visible_events_api.md
python/PolyEnv/: __init__.py
python/game_engine/: __init__.py  tribes.py
python/game_engine/data/: Units.json
python/tests/: golden_trajectory_seed42.json  test_belief_env.py  test_capital_domains.py  test_golden_trajectory.py  test_known_values.py  test_mcts_pool.py  test_model_request_api.py  test_player_view_api.py  test_polytopia_mechanics.py  test_replay_api.py  test_self_play_pool.py  test_step_fast_no_reveal.py  test_tile_predictions.py  test_tokenized_map.py  test_tribes_api.py  test_vector_env.py  test_visible_events_api.py
src/: Game.cpp  Game.h
src/Core/: Ids.cpp
src/Player/: Player.cpp  Player.h
src/Systems/: BuildingSystem.cpp  BuildingSystem.h  CitiesConnectionSystem.cpp  CitiesConnectionSystem.h  CityRewardSystem.cpp  CityRewardSystem.h  CitySystem.cpp  CitySystem.h  CityUpgradeSystem.cpp  CityUpgradeSystem.h  CombatSystem.cpp  CombatSystem.h  InfiltrationSystem.cpp  InfiltrationSystem.h  InteractionSystem.cpp  InteractionSystem.h  LighthouseSystem.cpp  LighthouseSystem.h  MonumentSystem.cpp  MonumentSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerSystem.cpp  PlayerSystem.h  RewardSystem.h  ScoreSystem.cpp  ScoreSystem.h  StarsSystem.cpp  StarsSystem.h  TechSystem.cpp  TechSystem.h  TileActionSystem.cpp  TileActionSystem.h  TurnSystem.cpp  TurnSystem.h  UnitSpawnSystem.cpp  UnitSpawnSystem.h  UnitSystem.cpp  UnitSystem.h  UnitUpgradeSystem.cpp  (+3 more)
src/World/: Map.h  MapGenerator.cpp  MapGenerator.h  Tile.cpp  Tile.h
src/World/Buildings/: AdjacentBuilding.cpp  AdjacentBuilding.h  AltarOfPeace.cpp  AltarOfPeace.h  Building.cpp  Building.h  BuildingDB.cpp  BuildingDB.h  EmperorsTomb.cpp  EmperorsTomb.h  EyeOfGod.cpp  EyeOfGod.h  Farm.cpp  Farm.h  Forge.cpp  Forge.h  GateOfPower.cpp  GateOfPower.h  GrandBazaar.cpp  GrandBazaar.h  LumberHut.cpp  LumberHut.h  Market.cpp  Market.h  Mine.cpp  Mine.h  Monument.cpp  Monument.h  ParkOfFortune.cpp  ParkOfFortune.h  Port.cpp  Port.h  Sawmill.cpp  Sawmill.h  SingleBuilding.cpp  SingleBuilding.h  TowerOfWisdom.cpp  TowerOfWisdom.h  Windmill.cpp  Windmill.h
src/World/Settlements/: City.cpp  City.h  Ruin.cpp  Ruin.h  Settlement.cpp  Settlement.h  Starfish.cpp  Starfish.h  Village.cpp  Village.h
src/World/terrain/: ResourcesEnum.h  RoadBridgeEnum.h  SettlementId.h
src/ai/: Action.cpp  Action.h  ActionSpace.cpp  ActionSpace.h  GameStateAdapter.cpp  GameStateAdapter.h  GameStateSerializer.cpp  GameStateSerializer.h  IGameState.cpp  IGameState.h  ModelClient.cpp  ModelClient.h
src/content/buildings/: BuildingDB.cpp  BuildingDB.h
src/content/settlements/: City.cpp  City.h  Settlement.h
src/core/: Ids.h
src/game/: Game.cpp  Game.h
src/gui/: GuiApp.cpp  GuiApp.h  MapRenderer.cpp  MapRenderer.h  TextureStore.cpp  TextureStore.h  TribeSelectScreen.cpp  TribeSelectScreen.h
src/player/: Player.cpp  Player.h
src/python/: ObservedEventJournal.h  bindings.cpp
src/replay/: ReplayRecorder.cpp  ReplayRecorder.h
src/runtime/: BeliefWorldBuilder.cpp  BeliefWorldBuilder.h  GameSession.cpp  GameSession.h
src/systems/: BuildingSystem.cpp  BuildingSystem.h  CitiesConnectionSystem.cpp  CitiesConnectionSystem.h  CityRewardSystem.cpp  CityRewardSystem.h  CitySystem.cpp  CitySystem.h  CombatSystem.cpp  CombatSystem.h  DisbandSystem.cpp  DisbandSystem.h  GameDataSystem.cpp  GameDataSystem.h  InfiltrationSystem.cpp  InfiltrationSystem.h  InteractionSystem.cpp  InteractionSystem.h  LighthouseSystem.cpp  LighthouseSystem.h  MonumentSystem.cpp  MonumentSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerSystem.cpp  PlayerSystem.h  ScoreSystem.cpp  ScoreSystem.h  StarsSystem.cpp  StarsSystem.h  TechSystem.cpp  TechSystem.h  TileActionSystem.cpp  TileActionSystem.h  TurnSystem.cpp  TurnSystem.h  UnitSpawnSystem.cpp  UnitSpawnSystem.h  UnitSystem.cpp  UnitSystem.h  (+4 more)
src/world/: Map.cpp  Map.h  MapGenerator.cpp  MapGenerator.h  Pos.cpp  Pos.h  Tile.cpp  Tile.h  generateMap.cpp  generateMap.h  map.cpp  map.h
(+33 files in other folders)
